ufoai (0.0.cvs) unstable; urgency=low

  * CVS snapshot
  * Depend on newer data package.

 -- Yann Dirson <dirson@debian.org>  Thu, 23 Feb 2006 00:23:51 +0100

ufoai (0.0.040218-0.8) unstable; urgency=low

  * Have DEB_BUILD_OPTIONS exported, so that the binaries really do not
    get stripped.

 -- Yann Dirson <dirson@debian.org>  Tue, 20 Apr 2004 11:32:05 +0200

ufoai (0.0.040218-0.7) unstable; urgency=low

  * Made Sys_GetGameAPI() to look for game.so instead of a lib with an
    arch-dependant name, thus allowing building on more archs than just
    i386 and alpha.  Updated all Makefiles with this name while I was at
    it.
  * Make so that update-ufoai-campaign properly removes the generated
    campaign when no snippets are found, instead of failing when removing
    the last data package.

 -- Yann Dirson <dirson@debian.org>  Mon, 19 Apr 2004 20:35:32 +0200

ufoai (0.0.040218-0.6) unstable; urgency=low

  * Added update-ufoai-campaign script, in new ufoai-common package.

 -- Yann Dirson <dirson@debian.org>  Mon, 19 Apr 2004 00:27:34 +0200

ufoai (0.0.040218-0.5) unstable; urgency=low

  * Set DEB_BUILD_OPTIONS=nostrip so that people can give useful info on
    coredumps.
  * Ensure gl_ref/gl_rmain.c::R_Init() returns 0 when reaching end of
    function, fixing the problem where people reported the OpenGL renderer
    did not init where there was no error reported - fix from upstream
    found at http://ufo.myexp.de/phpBB2/viewtopic.php?t=327
  * Use libGL.so.1 as default driver, not libGL.so, so that people do not
    need a libgl-dev package installed.

 -- Yann Dirson <dirson@debian.org>  Sun, 18 Apr 2004 20:34:25 +0200

ufoai (0.0.040218-0.4) unstable; urgency=low

  * Added a MIN_ZOOM parameter in client/cl_input.c, and set it to 0.5
    instead of the 1.0 default, so that we can have a better view of the
    terrain even at small screen resolutions.  Also changed
    client/cl_view.c for the limit (for some reason the limits in the 2