@@ -1,0 +1,5 @@
+*.debhelper
+*.substvars
+ufoai
+ufoai-tools
+files
