@@ -3,6 +3,9 @@
 # Sample debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
 
+export LC_ALL=C
+vercmd=dpkg-parsechangelog | grep ^Version: | cut -c 10- | sed s/\\./\\./g
+
 export DH_OPTIONS
 
 CFLAGS = -Wall -g
@@ -13,7 +16,7 @@ export DEB_BUILD_OPTIONS=nostrip
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
 else
-	CFLAGS += -O2
+	CFLAGS += -O4
 endif
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	INSTALL_PROGRAM += -s
@@ -22,7 +25,15 @@ endif
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
-	# Add here commands to configure the package.
+
+	set -e; if [ -d CVS ]; then \
+	  SRCVER=$(shell $(vercmd)) ;\
+	  CURVER=`cvsps -t -s 0 -u| grep '^Num patchsets:'| cut -c16-` ;\
+	  if [ -n "$$CURVER" ] ; then \
+	    sed 1s/$$SRCVER/0.0.cvsps$$CURVER/ < debian/changelog > debian/cl2;\
+	    mv debian/cl2 debian/changelog ;\
+	  fi ;\
+	fi
 
 	touch configure-stamp
 
@@ -32,9 +43,8 @@ build: build-stamp
 build-stamp: configure-stamp 
 	dh_testdir
 
-	# Add here commands to compile the package.
 	$(MAKE) -C linux
-	#/usr/bin/docbook-to-man debian/ufoai.sgml > ufoai.1
+	$(MAKE) -C tools
 
 	touch build-stamp
 
@@ -43,9 +53,15 @@ clean:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 
-	# Add here commands to clean up after the build process.
 	-$(MAKE) -C linux clean
+	-$(MAKE) -C tools clean
 	rm -rf linux/debug*-glibc
+
+	set -e; if [ -d CVS ]; then \
+	  SRCVER=$(shell $(vercmd)) ;\
+	  sed 1s/$$SRCVER/0.0.cvs/ < debian/changelog > debian/cl2;\
+	  mv debian/cl2 debian/changelog ;\
+	fi
 
 	dh_clean 
 
