@@ -1,0 +1,3 @@
+tools/qbsp3 /usr/games
+tools/qbspinfo3 /usr/games
+tools/qrad3 /usr/games
